don't update layout on mobile resize; make sure padding and size-adjust rules are applied

--- a/src/index.less
+++ b/src/index.less
@@ -177,10 +177,9 @@ body {
 }
 
 @media only screen and (max-device-width: 850px) and (orientation: landscape) {
-    -webkit-text-size-adjust: 100%;
-
     #page {
-        padding-bottom: 250px;
+        -webkit-text-size-adjust: 100%;
+        padding: 30px 7vw 250px 7vw;
 
         .spacer {
             height: 300px;
